2 rooms added. Fixed texture clipping. Tested transparency. Added some layout placeholders

--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,7 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+/* #c {
+  background: url("./img/sky.jpg");
+} */
